syntax = "proto3";
package nicholasdotsol.duality.mev;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/NicholasDotSol/duality/x/mev/types";
import "gogoproto/gogo.proto";

// Msg defines the Msg service.
service Msg {
      rpc Send(MsgSend) returns (MsgSendResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgSend {
  string creator = 1;
  string amountIn = 2 [
      (gogoproto.moretags)   = "yaml:\"amountIn\"",
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
      (gogoproto.nullable)   = false,
      (gogoproto.jsontag) = "amountIn"
  ]; 
  string tokenIn = 3;
}

message MsgSendResponse {
}

// this line is used by starport scaffolding # proto/tx/message
